UserProfileEditable fix scaling and resizing, fix invisible text in dropdowns, fixed button alignment

--- a/AdventureTogether/src/styles/index.css
+++ b/AdventureTogether/src/styles/index.css
@@ -42,11 +42,5 @@ code {
   fill: #fff;
 }
 
-[class^="profileSelect"] {
-  top: -20px;
-  height: 28px;
-  right: 15px;
-}
-
 @tailwind components;
 @tailwind utilities;
